[metadata]
name = creepin
version = 0.0.1
author = Scott Bradley
description = Base connectivity and CRUD for SQLAlchemy ORM


[options]
python_requires = >=3.8, <4
package_dir=
    =src
packages=find:
install_requires =
    dependency-injector>=4.3.3
    SQLAlchemy>=1.4.34

[options.packages.find]
where=src
