[metadata]
name = creepin
version = 0.0.1
author = Scott Bradley
description = Base connectivity and CRUD for SQLAlchemy ORM


[options]
python_requires = >=3.8, <4
package_dir=
    =src
packages=find:
install_requires =
    dependency-injector>=4.3.3
    pydantic==1.8.1
    SQLAlchemy>=2.0

[options.packages.find]
where=src
